--- a/output/index.html
+++ b/output/index.html
@@ -62,10 +62,10 @@
           <br><br>
           <span id="intro-description">That's Jorge like forge or gorge.</span>
           <div style="max-width: 860px">
-          <span id="intro-description">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+          <span id="intro-description">I'm a maker culture expert from <a <a class="w3-hover-text-grey" style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
           <span id="intro-description">I make, break, and fix things– teaching along the way.</span>
           <br><br>
-          <span id="intro-description">To best reach me, shoot me an <a style="color: #673ab7" href="http://makersinchicago.org">email</a></span>
+          <span id="intro-description">To best reach me, shoot me an <a class="w3-hover-text-grey" style="color: #673ab7" href="mailto:jorge@jorgegarcia.io">email</a></span>
           <span id="intro-description">or send me a text.</span>
         </div>
         </div>
